Changed the post request to remove IP and port number
